contacts fixed scrollbar x axis

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -29,7 +29,6 @@
 .contacts-sidebar-scrollbar {
     width: 100%;
     background-color: white;
-    overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: #a8a8a8 white;
     margin-top: -18px;
@@ -662,7 +661,6 @@
 }
 
 .hide-scrollbar {
-    overflow-y: auto;
     -ms-overflow-style: none;
 }
 
@@ -858,10 +856,6 @@
         gap: 54px;
     }
 
-    body {
-        margin-bottom: 250px;
-    }
-
     .contacts-side-headline h1 {
         display: flex;
         align-items: center;
@@ -919,19 +913,17 @@
         align-items: center;
         background-color: white;
         width: 100vw;
-        height: calc(100vh - 170px);
         margin-top: 96px;
         margin-left: 0px;
         padding-top: 20px;
         max-height: none;
-        padding-bottom: 30px;
+        padding-bottom: 100px;
         min-width: unset;
     }
 
     .contacts-sidebar-scrollbar {
         width: 100%;
         background-color: white;
-        overflow-y: auto;
         scrollbar-width: thin;
         scrollbar-color: #a8a8a8 white;
         margin-top: -18px;
@@ -1099,6 +1091,7 @@
         flex-direction: column;
         align-items: center;
         min-width: none;
+        padding-bottom: 100px;
     }
 
     .contact-list-seperator {
@@ -1358,11 +1351,6 @@
     .add-contact-overlay {
         width: 94vw;
     }
-
-    .contacts-sidebar-container {
-        height: calc(100vh - 0px);
-    }
-
 }
 
 @media screen and (max-width: 900px) {
@@ -1372,11 +1360,6 @@
 
     .add-contact-overlay {
         width: 93vw;
-    }
-
-    .contacts-sidebar-container {
-        height: calc(100vh - 200px);
-        padding-bottom: 100px;
     }
 }
 
@@ -1432,19 +1415,12 @@
         font-size: 35px;
         white-space: nowrap;
     }
-
-    .contacts-sidebar-container {
-        height: calc(100vh - 180px);
-        padding-bottom: 80px;
-    }
-
 }
 
 @media screen and (max-width: 400px) {
     .contacts-sidebar-scrollbar {
         width: 100%;
         background-color: white;
-        overflow-y: auto;
         scrollbar-width: thin;
         scrollbar-color: #a8a8a8 white;
         margin-top: -18px;
@@ -1456,7 +1432,6 @@
         align-items: center;
         background-color: white;
         width: 100vw;
-        height: calc(100vh - 180px);
         margin-top: 96px;
         margin-left: 0px;
         padding-top: 20px;
@@ -1493,45 +1468,5 @@
 
     .add-contact-btn-section {
         padding-bottom: 10px;
-    }
-
-    .contacts-sidebar-container {
-        height: calc(100vh - 195px);
-    }
-}
-
-@media screen and (max-width: 1280px) and (max-height: 800px) {
-    .contacts-sidebar-container {
-        height: calc(100vh - 200px);
-    }
-}
-
-@media screen and (min-width: 820px) and (max-height: 1180px) {
-    .contacts-sidebar-container {
-        height: calc(100vh - 200px);
-    }
-}
-
-@media screen and (min-width: 820px) and (max-height: 1180px) {
-    .contacts-sidebar-scrollbar {
-        padding-bottom: 85px;
-    }
-}
-
-@media screen and (min-width: 1024px) and (max-height: 1366px) {
-    .contacts-sidebar-scrollbar {
-        padding-bottom: 270px;
-    }
-}
-
-@media screen and (min-width: 912px) and (max-height: 1368px) {
-    .contacts-sidebar-scrollbar {
-        padding-bottom: 275px;
-    }
-}
-
-@media screen and (min-width: 853px) and (max-height: 1280px) {
-    .contacts-sidebar-scrollbar {
-        padding-bottom: 200px;
     }
 }
